<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">番迷</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="guide_enter">猛戳进入</string>
    <string name="login">登录</string>
    <string name="signup">注册</string>
    <string name="phone_number">电话号码（11位数字）</string>
    <string name="user_password">密码（6到18位）</string>
    <string name="user_password_again">密码（再输一次）</string>
    <string name="captcha">验证码</string>
    <string name="get_captcha">获取验证码</string>
    <string name="select_college">选择学校</string>
    <string name="input_college">输入学校名称</string>
    <string name="select_dept">选择院系</string>
    <string name="select_grade">选择年级</string>
    <string name="nickname">昵称：</string>
    <string name="college">学校：</string>
    <string name="dept">院系：</string>
    <string name="grade">年级：</string>
    <string name="login_back">重填</string>
    <string name="confir">确认</string>
    <string name="complete_ud">个人信息</string>
    <string name="complete_ud_photo">请上传您的照片</string>
    <string name="complete_ud_photo_text">美丽的照片提高交友率89.923%</string>
    <string name="name">姓名</string>
    <string name="complete_ud_name">建议填写真实姓名</string>
    <string name="sex">性别</string>
    <string name="complete_ud_sex">这个很重要，可不能乱来</string>
    <string name="cl">星座</string>
    <string name="complete_ud_cl">系统匹配交友的一个参数</string>
    <string name="select_cl">选择星座</string>
    <string name="complete">完成</string>
    
    <string name="find">番迷</string>
    <string name="info">消息</string>
    <string name="friend">好友</string>
    <string name="group">秘圈</string>
    <string name="me">我</string>
    
    <string name="pass">pass</string>
    <string name="like">like</string>
    <string name="find_fans">Like我的</string>
    <string name="find_fans_no_info">列表暂无数据</string>
    <string name="find_forecast">预计</string>
    <string name="find_later">之后</string>
    <string name="find_marriage">你的缘分将会到来\n在这期间，很可能有人会Like你哦</string>
    <string name="find_match">番迷君正在计算你的姻缘</string>
    
    <string name="info_setting">消息通知</string>
    <string name="new_info_setting">新消息提醒</string>
    <string name="new_info_receive">接收新消息通知</string>
    <string name="new_info_sound">声音</string>
    <string name="new_info_vibrate">震动</string>
    <string name="chat_setting">聊天设置</string>
    <string name="chat_speaker">使用扬声器播放语音</string>
    <string name="info_no_info">暂时没有新消息</string>
    
    <string name="search_header">S</string>
    <string name="delete">删除</string>
    <string name="text_ack_msg">已读</string>
    <string name="resend">重发</string>
    <string name="percentage_zero">0%</string>
    <string name="urm_count">7</string>
    <string name="sdf">sdf</string>
    <string name="location_message">位置信息</string>
    <string name="confirm_resend">确认重发该信息？</string>
    <string name="move_up_to_cancel">手指上滑，取消发送</string>
    <string name="release_to_cancel">松开手指，取消发送</string>
    <string name="recoding_fail">录音失败，请重试！</string>
    <string name="press_to_speek">按住说话</string>
    <string name="edit_cbpm_hint"></string>
    <string name="send">发送</string>
    <string name="expression">表情</string>
    <string name="picture">图片</string>
    <string name="location">位置</string>
    <string name="video">视频</string>
    <string name="file">文件</string>
    <string name="prompt">提示</string>
    <string name="temp"></string>
    <string name="copy">复制</string>
    <string name="forward">转发</string>
    <string name="delete_message">删除消息</string>
    <string name="copy_message">复制消息</string>
    <string name="delete_voice">删除语音</string>
    <string name="info_location_recv">[%1$s的位置]</string>
    <string name="info_location_prefix">[我的位置]</string>
    <string name="info_voice">[语音]</string>
    <string name="info_picture">[图片]</string>
    <string name="info_video">[视频]</string>
    <string name="info_file">[文件]</string>
    <string name="recording_video">录制视频</string>
    <string name="download_video">正在下载视频请稍候</string>
    <string name="person_data">个人资料</string>
    
    <string name="status_no_info">还没有帖子</string>
    <string name="read">浏览</string>
    <string name="praise">赞</string>
    <string name="message">评论</string>
    <string name="download_error">下载大图失败</string>
    <string name="write_status">发贴子</string>
    <string name="write_status_release">发布</string>
    <string name="write_status_hint">匿名发表你的话语权</string>
    <string name="take_photos">拍照</string>
    <string name="select_photos">从相册中选取</string>
    <string name="cancel">取消</string>
    <string name="photos">相册</string>
    <string name="status_info">与我相关</string>
    <string name="status_info_no_info">没有与我相关的帖子</string>
    <string name="detail">详情</string>
    <string name="publisher">楼主</string>
    <string name="anonymity">写下你的留言</string>
    <string name="default_exp">默认</string>
    <string name="release">发  表</string>
    
    <string name="share">我正在使用番迷聊天交友</string>
    <string name="share_content">番迷：聊天吐嘈的好软件</string>
    <string name="my_data">我的资料</string>
    <string name="update">更新</string>
    <string name="update_nickname">昵称</string>
    <string name="nickname_hint">昵称不能为空</string>
    <string name="update_signature">个性签名</string>
    <string name="signature_hint">写出你的个性</string>
    <string name="album">照片墙</string>
    <string name="my_album_no_picture">我还没有上传照片</string>
    <string name="pd_no_picture">TA还没有上传照片</string>
    <string name="add">添加</string>
    <string name="add_album">添加照片</string>
    <string name="auth">实名认证</string>
    <string name="studentid">学校教务系统学号</string>
    <string name="password">学校教务系统密码</string>
    <string name="click_auth">认    证</string>
    <string name="setting">设置</string>
    <string name="setting_vf">版本特性</string>
    <string name="version_features">番迷1.0\n\n番迷（英文名：FindMe）是一款实名认证大学生交友平台。
        你可以，通过番迷认识缘分中的“TA”；你可以，不用害怕被心仪的“TA”拒接；
        你可以，与“TA”分享你的快乐，随时随地聊天；你可以，匿名吐槽学校中奇葩老师和神一样的同学，寻找与你投缘的“TA”。</string>
    <string name="setting_au">关于我们</string>
    <string name="about_us">官网：http://www.ifanmi.cn\n\nQQ群：245927732</string>
    <string name="setting_uf">用户反馈</string>
    <string name="user_feedback">告诉我们你遇到的问题</string>
    <string name="auth">实名认证</string>
    <string name="re_request">重新请求</string>
    <string name="input_captcha">输入验证码</string>
    <string name="user_exit">注    销</string>
    
    <string name="long_string">一二三四工工工工工工工工工工工工工
        一二三四工工工工工工工工工工工工工
        一二三四工工工工工工工工工工工工工
        一二三四工工工工工工工工工工工工工
        一二三四工工工工工工工工工工工工工</string>
        
    <string name="pushmsg_center_no_more_msg">已经到底啦</string>
    <string name="pushmsg_center_pull_up_text">松开加载更多</string>
    <string name="pushmsg_center_pull_down_text">下拉可以刷新</string>
    <string name="pushmsg_center_pull_release_text">松开获取更多</string>
    <string name="pushmsg_center_pull_down_update_time">最后更新时间 : </string>
    <string name="pushmsg_center_load_more_ongoing_text">正在加载中</string>
    <string name="xsearch_loading">正在加载中…</string>

    <!-- 加载图片失败时的提示文本 -->
    <string name="picture_load_image_failed">点击屏幕，重新加载</string>
    <!-- 加载中提示 -->
    <string name="picture_image_loading">正在加载…</string>
    
    <!-- 下拉刷新和上拉加载更多的文本 -->
    <string name="pull_to_refresh_header_hint_normal">@string/pushmsg_center_pull_down_text</string>
    <string name="pull_to_refresh_header_hint_normal2">上拉可以刷新</string>
    <string name="pull_to_refresh_header_hint_ready">松开后刷新</string>
    <string name="pull_to_refresh_header_hint_loading">@string/pushmsg_center_load_more_ongoing_text</string>
    <string name="pull_to_refresh_header_last_time">@string/pushmsg_center_pull_down_update_time</string>
    <string name="pull_to_refresh_footer_hint_ready">松开载入更多</string>
    <string name="pull_to_refresh_refreshing_label">@string/pull_to_refresh_header_hint_loading</string>
    <string name="pull_to_refresh_no_more_data">@string/pushmsg_center_no_more_msg</string>
    <string name="pull_to_refresh_network_error">网络不给力，请检查网络</string>
    
    <!-- 图片保存的文字 -->
    <string name="picture_save_succeed">图片已保存到相册</string>
    <string name="picture_save_fail">保存图片失败</string>
    <string name="picture_next_album">下一组：</string>
    <string name="picture_previous_album">上一组：</string>

</resources>
