<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/common_bg">
    <RelativeLayout 
	    android:layout_width="match_parent"
		android:layout_height="@dimen/actionbar_height"
		android:background="@drawable/actionbar_bg">
		<Button 
		    android:id="@+id/btn_back_update_nickname"
		    style="@style/bar_back"/>
		<TextView 
	    	android:text="@string/update_nickname"
	    	style="@style/bar_text"/>
		<Button 
		    android:id="@+id/btn_ok_update_nickname"
		    android:text="@string/update"
		    style="@style/bar_right_text_full"/>
	</RelativeLayout>
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="vertical">
	    <EditText 
            android:id="@+id/edit_update_nickname"
	        android:layout_width="match_parent"
	    	android:layout_height="38dp"
	    	android:layout_margin="10dp"
	    	android:padding="10dp"
	    	android:background="@drawable/edit_gray_47"
	    	android:hint="@string/nickname_hint"
	    	android:textColorHint="@color/gray"
	    	android:textSize="16sp"
	    	android:textColor="@color/black"
	    	android:singleLine="true"
	    	android:maxLength="8"/>
	</LinearLayout>
</LinearLayout>
