<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="10dp"
    android:gravity="center_vertical"
    android:id="@+id/layout_auth_captcha"
    android:visibility="gone">
    <ImageView 
        android:id="@+id/img_auth_captcha"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:contentDescription="@string/hello_world"/>
    <Button 
		android:id="@+id/btn_auth_request_captcha"
		android:layout_width="80dp" 
		android:layout_height="35dp"
		android:layout_marginLeft="10dp"
		android:text="@string/re_request"
		android:textSize="14sp"
		android:textColor="@color/white"
		android:background="@drawable/btn_like_bg"/>
    <EditText 
		android:id="@+id/edit_auth_captcha"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginLeft="20dp"
		android:paddingLeft="10dp"
		android:paddingRight="10dp"
		android:paddingTop="8dp"
		android:paddingBottom="8dp"
		android:hint="@string/input_captcha"
		android:textSize="16sp"
		android:textColor="@color/black"
		android:textColorHint="@color/gray"
		android:background="@drawable/layout_bg_css"
		android:visibility="gone"/>
</LinearLayout>
