<?xml version="1.0" encoding="utf-8"?>
<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@android:id/tabhost"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/common_bg">
        <TabWidget 
	        android:id="@android:id/tabs"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:visibility="gone">  
	    </TabWidget>
        <FrameLayout 
	        android:id="@android:id/tabcontent"
	        android:layout_width="match_parent"
	        android:layout_height="0dp"
        	android:layout_weight="1">
     	</FrameLayout>
     	<include layout="@layout/divider_green"/>
     	<LinearLayout 
		   	android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:layout_gravity="bottom">
	      	<RelativeLayout
	            android:id="@+id/layout_hp_find"
	            style="@style/hp_btn_layout">
	            <Button
	                android:id="@+id/btn_hp_find"
	                android:drawableTop="@drawable/btn_find"
	                android:text="@string/find"
	                style="@style/hp_btn"/>
	            <TextView
	                android:id="@+id/txt_hp_find"
	                style="@style/hp_btn_text"/>
	        </RelativeLayout>
	      	<RelativeLayout
	            android:id="@+id/layout_hp_info"
	            style="@style/hp_btn_layout">
	            <Button
	                android:id="@+id/btn_hp_info"
	                android:drawableTop="@drawable/btn_info"
	                android:text="@string/info"
	                style="@style/hp_btn"/>
	            <TextView
	                android:id="@+id/txt_hp_info"
	                style="@style/hp_btn_text"/>
	        </RelativeLayout>
	        <RelativeLayout
	            android:id="@+id/layout_hp_friend"
				style="@style/hp_btn_layout">
	            <Button
	                android:id="@+id/btn_hp_friend"
	                android:drawableTop="@drawable/btn_friend"
	                android:text="@string/friend"
	                style="@style/hp_btn"/>
	            <TextView
	                android:id="@+id/txt_hp_friend"
	                style="@style/hp_btn_text"/>
	        </RelativeLayout>
	        <RelativeLayout
	            android:id="@+id/layout_hp_group"
	            style="@style/hp_btn_layout">
	            <Button
	                android:id="@+id/btn_hp_group"
	                android:drawableTop="@drawable/btn_group"
	                android:text="@string/group"
	                style="@style/hp_btn"/>
	            <TextView
	                android:id="@+id/txt_hp_group"
	                style="@style/hp_btn_text"/>
	        </RelativeLayout>
	        <RelativeLayout
	            android:id="@+id/layout_hp_me"
	            style="@style/hp_btn_layout">
	            <Button
	                android:id="@+id/btn_hp_me"
	                android:drawableTop="@drawable/btn_me"
	                android:text="@string/me"
	                style="@style/hp_btn"/>
	            <TextView
	                android:id="@+id/txt_hp_me"
	                style="@style/hp_btn_text"/>
	        </RelativeLayout>
		 </LinearLayout>
	</LinearLayout>
</TabHost>
