<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/common_bg">
    <RelativeLayout 
	    android:layout_width="match_parent"
		android:layout_height="@dimen/actionbar_height"
		android:background="@drawable/actionbar_bg">
		<Button 
		    android:id="@+id/btn_back_signup"
		    style="@style/bar_back"/>
		<TextView 
	    	android:text="@string/signup"
	    	style="@style/bar_text"/>
	</RelativeLayout>
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical">
	    <EditText 
	        android:id="@+id/edit_signup_phonenumber"
	        android:layout_width="match_parent"
	    	android:layout_height="wrap_content"
	    	android:layout_marginTop="20dp"
	    	android:layout_marginLeft="10dp"
	    	android:layout_marginRight="10dp"
	    	android:textSize="18sp"
	    	android:textColor="@color/black"
	    	android:padding="10dp"
	    	android:inputType="phone"
	    	android:singleLine="true"
	    	android:hint="@string/phone_number"
	    	android:textColorHint="@color/gray"
	    	android:drawableLeft="@drawable/img_phonenumber"
	    	android:drawablePadding="10dp"
	    	android:background="@drawable/layout_bg_ss"/>
	    <EditText 
	        android:id="@+id/edit_signup_password"
	        android:layout_width="match_parent"
	    	android:layout_height="wrap_content"
	    	android:layout_marginTop="10dp"
	    	android:layout_marginLeft="10dp"
	    	android:layout_marginRight="10dp"
	    	android:textSize="18sp"
	    	android:textColor="@color/black"
	    	android:hint="@string/user_password"
	    	android:textColorHint="@color/gray"
	    	android:inputType="textPassword"
	    	android:singleLine="true"
	    	android:padding="10dp"
	    	android:drawableLeft="@drawable/img_password"
	    	android:drawablePadding="10dp"
	    	android:background="@drawable/layout_bg_ss"/>
	    <EditText 
	        android:id="@+id/edit_signup_password_again"
	        android:layout_width="match_parent"
	    	android:layout_height="wrap_content"
	    	android:layout_marginTop="-1dp"
	    	android:layout_marginLeft="10dp"
	    	android:layout_marginRight="10dp"
	    	android:textSize="18sp"
	    	android:textColor="@color/black"
	    	android:hint="@string/user_password_again"
	    	android:textColorHint="@color/gray"
	    	android:inputType="textPassword"
	    	android:singleLine="true"
	    	android:padding="10dp"
	    	android:drawableLeft="@drawable/img_password"
	    	android:drawablePadding="10dp"
	    	android:background="@drawable/layout_bg_ss"/>
	    <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:layout_marginTop="10dp"
	        android:layout_marginLeft="10dp"
	        android:layout_marginRight="10dp">
	        <EditText 
		        android:id="@+id/edit_signup_captcha"
		        android:layout_width="0dp"
		    	android:layout_height="wrap_content"
		    	android:layout_weight="1"
		    	android:layout_marginRight="10dp"
		    	android:textSize="18sp"
		    	android:textColor="@color/black"
		    	android:hint="@string/captcha"
		    	android:textColorHint="@color/gray"
		    	android:inputType="number"
		    	android:singleLine="true"
		    	android:padding="10dp"
		    	android:drawableLeft="@drawable/img_captcha"
		    	android:drawablePadding="10dp"
		    	android:background="@drawable/layout_bg_ss"/>
	        <RelativeLayout 
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
		        android:layout_marginLeft="10dp">
	            <Button 
			        android:id="@+id/btn_signup_get_captcha"
			        android:layout_width="match_parent" 
			        android:layout_height="40dp"
			        android:text="@string/get_captcha"
			        android:textSize="18sp"
			        android:textColor="@color/white"
			        android:background="@drawable/login_btn_bg"
			        android:visibility="visible"/>
	            <TextView 
	                android:id="@+id/txt_signup_countdown"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:text="@string/hello_world"
	                android:textSize="18sp"
	                android:textColor="@color/gray"
	                android:padding="10dp"
	                android:gravity="center"
	                android:background="@drawable/layout_bg_css"
	                android:visibility="gone"/>
	        </RelativeLayout>
	    </LinearLayout>
	    <Button 
	        android:id="@+id/btn_signup_signup"
	        android:layout_width="match_parent" 
	        android:layout_height="40dp"
	        android:layout_marginTop="20dp"
	        android:layout_marginLeft="10dp"
	        android:layout_marginRight="10dp"
	        android:text="@string/signup"
	        android:textSize="18sp"
	        android:textColor="@color/white"
	        android:background="@drawable/login_btn_bg"/>
	</LinearLayout>
</LinearLayout>
