<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/common_bg">
    <RelativeLayout 
	    android:layout_width="match_parent"
		android:layout_height="@dimen/actionbar_height"
		android:background="@drawable/actionbar_bg">
		<Button 
		    android:id="@+id/btn_back_setting_vf"
		    style="@style/bar_back"/>
		<TextView 
	    	android:text="@string/setting_vf"
	    	style="@style/bar_text"/>
	</RelativeLayout>
	<ScrollView 
	    android:layout_width="match_parent"
	    android:layout_height="match_parent">
		<LinearLayout 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical">
		    <TextView 
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_margin="10dp"
		        android:text="@string/version_features"
		        android:textSize="16sp"
		        android:textColor="@color/black"/>
		    <ImageView 
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_margin="10dp"
		        android:src="@drawable/img_vf_01"
		        android:contentDescription="@string/hello_world"/>
		    <ImageView 
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_margin="10dp"
		        android:src="@drawable/img_vf_02"
		        android:contentDescription="@string/hello_world"/>
		</LinearLayout>
	</ScrollView>
</LinearLayout>
