<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/common_bg">
    <ImageView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:src="@drawable/img_fanmi"
        android:contentDescription="@string/hello_world"/>
    <ListView 
        android:id="@+id/list_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:divider="@color/white_divider"
   		android:dividerHeight="1dp"
   		android:cacheColorHint="#00000000"
   		android:listSelector="@color/transparent"
        android:background="@drawable/layout_bg_ss"/>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">
        <Button 
            android:id="@+id/btn_login_back"
            android:layout_marginRight="5dp"
            android:text="@string/login_back"
            style="@style/login_btn"/>
       	<Button 
            android:id="@+id/btn_login_ok"
            android:layout_marginLeft="5dp"
            android:text="@string/confir"
            style="@style/login_btn"/>
    </LinearLayout>
</LinearLayout>
