<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/common_bg">
    <RelativeLayout 
	    android:layout_width="match_parent"
		android:layout_height="@dimen/actionbar_height"
		android:background="@drawable/actionbar_bg">
		<Button 
		    android:id="@+id/btn_back_info_setting"
		    style="@style/bar_back"/>
		<TextView 
		    android:text="@string/info_setting"
		    style="@style/bar_text"/>
	</RelativeLayout>
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="vertical"
	    android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"
            android:gravity="bottom|left"
            android:textColor="@color/gray"
            android:text="@string/new_info_setting" />
        <include layout="@layout/divider_gray_onedp"/>
        <RelativeLayout
            android:id="@+id/layout_is_switch_notification"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/info_setting_layout_bg"
            android:layout_marginTop="5dp" 
            android:layout_marginBottom="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:paddingLeft="10dp"
                android:text="@string/new_info_receive"
                android:typeface="serif"
                android:textSize="14sp"
                android:textColor="@color/black"/>
            <ImageView
                android:id="@+id/img_is_switch_notification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/icon_open" 
                android:contentDescription="@string/hello_world"/>
        </RelativeLayout>
        <ImageView 
            android:id="@+id/img_is_d1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@color/gray_divider"
            android:contentDescription="@string/hello_world"/>
        <RelativeLayout
            android:id="@+id/layout_is_switch_sound"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/info_setting_layout_bg"
            android:layout_marginTop="5dp" 
            android:layout_marginBottom="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:paddingLeft="10dp"
                android:text="@string/new_info_sound"
                android:typeface="serif"
                android:textSize="14sp"
                android:textColor="@color/black"/>
            <ImageView
                android:id="@+id/img_is_switch_sound"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/icon_open" 
                android:contentDescription="@string/hello_world"/>
        </RelativeLayout>
        <ImageView 
            android:id="@+id/img_is_d2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@color/gray_divider"
            android:contentDescription="@string/hello_world"/>
        <RelativeLayout
            android:id="@+id/layout_is_switch_vibrate"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/info_setting_layout_bg"
            android:layout_marginTop="5dp" 
            android:layout_marginBottom="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:paddingLeft="10dp"
                android:text="@string/new_info_vibrate"
                android:typeface="serif"
                android:textSize="14sp"
                android:textColor="@color/black"/>
            <ImageView
                android:id="@+id/img_is_switch_vibrate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/icon_open" 
                android:contentDescription="@string/hello_world"/>
        </RelativeLayout>
        <include layout="@layout/divider_gray"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"
            android:gravity="bottom|left"
            android:textColor="@color/gray"
            android:text="@string/chat_setting" />
        <include layout="@layout/divider_gray_onedp"/>
        <RelativeLayout
            android:id="@+id/layout_is_switch_speaker"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/info_setting_layout_bg"
            android:layout_marginTop="5dp" 
            android:layout_marginBottom="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:paddingLeft="10dp"
                android:text="@string/chat_speaker"
                android:typeface="serif"
                android:textSize="14sp"
                android:textColor="@color/black"/>
            <ImageView
                android:id="@+id/img_is_switch_speaker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/icon_open" 
                android:contentDescription="@string/hello_world"/>
        </RelativeLayout>
	</LinearLayout>
</LinearLayout>
