<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:background="@drawable/layout_bg_sc"
    android:clickable="true"
    android:id="@+id/layout_complete_ud_photo">
    <ImageView 
        android:id="@+id/img_complete_ud_photo"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"
        android:layout_centerVertical="true"
        android:src="@drawable/img_complete_ud_photo"
        android:contentDescription="@string/hello_world"/>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@id/img_complete_ud_photo"
        android:layout_toLeftOf="@+id/img_complete_ud_select"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">
        <TextView 
	        android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:text="@string/complete_ud_photo"
	    	android:textSize="16sp"
	    	android:textColor="@color/black"/>
        <TextView 
	        android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:layout_marginTop="8dp"
	    	android:text="@string/complete_ud_photo_text"
	    	android:textSize="15sp"
	    	android:textColor="@color/gray"/>
    </LinearLayout>
    <ImageView 
        android:id="@id/img_complete_ud_select"
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_centerVertical="true"
    	android:layout_alignParentRight="true"
    	android:layout_marginRight="10dp"
    	android:src="@drawable/img_select"
    	android:contentDescription="@string/hello_world"/>
</RelativeLayout>